# nixops-proxmox

./: .gitignore  flake.nix  pyproject.toml  shell.nix
nixops_proxmox/: plugin.py  proxmox_utils.py
nixops_proxmox/backends/: options.py  proxmox.py
nixops_proxmox/nix/: default.nix  proxmox.nix
