[tool.poetry]
name = "nixops_proxmox"
version = "0.1.0"
description = "NixOps plugin for Proxmox"
authors = ["Scott Techau <scott.techau@gmail.com>"]
license = "MIT"
include = ["nixops_proxmox/nix/*.nix"]

[tool.poetry.dependencies]
python = "^3.10"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
proxmoxer = "^1.3.1"
requests = "^2.28.1"
paramiko = "^2.11.0"
bcrypt = "^3.1.3" # Prevent 4.0.0 as it uses rust which doesn't work with poetry2nix

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"

[tool.poetry.plugins."nixops"]
proxmox = "nixops_proxmox.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

